# termuxwc

./: .gitignore  README.md  meson.build
include/protocols/: xdg-shell-protocol.c  xdg-shell-protocol.h
src/: main.c  main.c.save
